--- a/analysis/references.bib
+++ b/analysis/references.bib
@@ -11,7 +11,6 @@
   author = {Jahn, Najko and Haupka, Nick and Hobert, Anne},
   title = {Analysing and reclassifying open access information in OpenAlex},
   url = {https://subugoe.github.io/scholcomm_analytics/posts/oalex_oa_status/},
-  howpublished = {Blog post},
   year = {2023}
 }
 
@@ -43,7 +42,7 @@
 
 @article{Huang_2020, title={Evaluating the impact of open access policies on research institutions}, volume={9}, ISSN={2050-084X}, url={http://dx.doi.org/10.7554/eLife.57067}, DOI={10.7554/elife.57067}, journal={eLife}, publisher={eLife Sciences Publications, Ltd}, author={Huang, Chun-Kai (Karl) and Neylon, Cameron and Hosking, Richard and Montgomery, Lucy and Wilson, Katie S and Ozaygen, Alkim and Brookes-Kenworthy, Chloe}, year={2020}, month=sep }
 
-@article{P_l_nen_2020, title={Open access at the national level: A comprehensive analysis of publications by Finnish researchers}, volume={1}, ISSN={2641-3337}, url={http://dx.doi.org/10.1162/qss_a_00084}, DOI={10.1162/qss_a_00084}, number={4}, journal={Quantitative Science Studies}, publisher={MIT Press - Journals}, author={Pölönen, Janne and Laakso, Mikael and Guns, Raf and Kulczycki, Emanuel and Sivertsen, Gunnar}, year={2020}, month=dec, pages={1396–1428} }
+@article{P_l_nen_2020, title={Open access at the national level: A comprehensive analysis of publications by {Finnish} researchers}, volume={1}, ISSN={2641-3337}, url={http://dx.doi.org/10.1162/qss_a_00084}, DOI={10.1162/qss_a_00084}, number={4}, journal={Quantitative Science Studies}, publisher={MIT Press - Journals}, author={Pölönen, Janne and Laakso, Mikael and Guns, Raf and Kulczycki, Emanuel and Sivertsen, Gunnar}, year={2020}, month=dec, pages={1396–1428} }
 
 @article{Wenaas_2022, title={Choices of immediate open access and the relationship to journal ranking and publish-and-read deals}, volume={7}, ISSN={2504-0537}, url={http://dx.doi.org/10.3389/frma.2022.943932}, DOI={10.3389/frma.2022.943932}, journal={Frontiers in Research Metrics and Analytics}, publisher={Frontiers Media SA}, author={Wenaas, Lars}, year={2022}, month=oct }
 @article{Marwick_2018, title={Packaging Data Analytical Work Reproducibly Using {R} (and Friends)}, volume={72}, url={http://dx.doi.org/10.1080/00031305.2017.1375986}, DOI={10.1080/00031305.2017.1375986}, number={1}, journal={The American Statistician}, publisher={Informa UK Limited}, author={Marwick, Ben and Boettiger, Carl and Mullen, Lincoln}, year={2018}, pages={80--88} }
@@ -54,7 +53,26 @@
 
 @article{Liverpool_2023, title={Open-access reformers launch next bold publishing plan}, volume={623}, ISSN={1476-4687}, url={http://dx.doi.org/10.1038/d41586-023-03342-6}, DOI={10.1038/d41586-023-03342-6}, number={7986}, journal={Nature}, publisher={Springer Science and Business Media LLC}, author={Liverpool, Layal}, year={2023}, month=oct, pages={238–240} }
 
-@article{Klebel_2023, title={The APC-barrier and its effect on stratification in open access publishing}, volume={4}, ISSN={2641-3337}, url={http://dx.doi.org/10.1162/qss_a_00245}, DOI={10.1162/qss_a_00245}, number={1}, journal={Quantitative Science Studies}, publisher={MIT Press}, author={Klebel, Thomas and Ross-Hellauer, Tony}, year={2023}, pages={22–43} }
+@article{Ross_Hellauer_2022, title={Dynamics of cumulative advantage and threats to equity in open science: a scoping review}, volume={9}, ISSN={2054-5703}, url={http://dx.doi.org/10.1098/rsos.211032}, DOI={10.1098/rsos.211032}, number={1}, journal={Royal Society Open Science}, publisher={The Royal Society}, author={Ross-Hellauer, Tony and Reichmann, Stefan and Cole, Nicki Lisa and Fessl, Angela and Klebel, Thomas and Pontika, Nancy}, year={2022}, month=jan }
+
+@article{Schmal_2024, title={How transformative are transformative agreements? Evidence from Germany across disciplines}, ISSN={1588-2861}, url={http://dx.doi.org/10.1007/s11192-024-04955-y}, DOI={10.1007/s11192-024-04955-y}, journal={Scientometrics}, publisher={Springer Science and Business Media LLC}, author={Schmal, W. Benedikt}, year={2024}, month=feb }
+
+@Manual{hoaddata,
+    title = {{hoaddata}: Data about hybrid open access journal publishing},
+    author = {Najko Jahn},
+    year = {2023},
+    note = {R package version 0.2.91},
+    url = {https://github.com/subugoe/hoaddata/releases/tag/v0.2.91}}
+
+  @Manual{bigrquery,
+    title = {bigrquery: An Interface to Google's 'BigQuery' 'API'},
+    author = {Hadley Wickham and Jennifer Bryan},
+    year = {2023},
+    note = {R package version 1.4.2},
+    url = {https://CRAN.R-project.org/package=bigrquery} }
+  
+  
+@article{Hendricks_2020, title={Crossref: The sustainable source of community-owned scholarly metadata}, volume={1}, ISSN={2641-3337}, url={http://dx.doi.org/10.1162/qss_a_00022}, DOI={10.1162/qss_a_00022}, number={1}, journal={Quantitative Science Studies}, publisher={MIT Press - Journals}, author={Hendricks, Ginny and Tkaczyk, Dominika and Lin, Jennifer and Feeney, Patricia}, year={2020}, month=feb, pages={414–427} }
 
 @article{Parmhed_2023, title={Transformative agreements and their practical impact: a librarian perspective}, volume={36}, ISSN={2048-7754}, url={http://dx.doi.org/10.1629/uksg.612}, DOI={10.1629/uksg.612}, journal={Insights the UKSG journal}, publisher={Ubiquity Press, Ltd.}, author={Parmhed, Sara and Säll, Johanna}, year={2023} }
 
@@ -90,7 +108,7 @@ url = {https://hdl.handle.net/11858/00-001M-0000-0013-838A-6}
 
 @article{Fraser_2023, title={No deal: German researchers’ publishing and citing behaviors after Big Deal negotiations with {Elsevier}}, volume={4}, ISSN={2641-3337}, url={http://dx.doi.org/10.1162/qss_a_00255}, DOI={10.1162/qss_a_00255}, number={2}, journal={Quantitative Science Studies}, publisher={MIT Press}, author={Fraser, Nicholas and Hobert, Anne and Jahn, Najko and Mayr, Philipp and Peters, Isabella}, year={2023}, pages={325–352} }
 
-@article{Schiltz_2018, title={Science without publication paywalls: cOAlition S for the realisation of full and immediate Open Access}, volume={16}, ISSN={1545-7885}, url={http://dx.doi.org/10.1371/journal.pbio.3000031}, DOI={10.1371/journal.pbio.3000031}, number={9}, journal={PLOS Biology}, publisher={Public Library of Science (PLoS)}, author={Schiltz, Marc}, year={2018}, month=sep, pages={e3000031} }
+@article{Schiltz_2018, title={Science without publication paywalls: {cOAlition S} for the realisation of full and immediate Open Access}, volume={16}, ISSN={1545-7885}, url={http://dx.doi.org/10.1371/journal.pbio.3000031}, DOI={10.1371/journal.pbio.3000031}, number={9}, journal={PLOS Biology}, publisher={Public Library of Science (PLoS)}, author={Schiltz, Marc}, year={2018}, month=sep, pages={e3000031} }
 
 @article{Mittermaier_2021,
  doi = {10.5282/O-BIB/5731},
@@ -112,11 +130,11 @@ url = {https://hdl.handle.net/11858/00-001M-0000-0013-838A-6}
  
 @article{Momeni_2021, title={What happens when a journal converts to open access? A bibliometric analysis}, volume={126}, ISSN={1588-2861}, url={http://dx.doi.org/10.1007/s11192-021-03972-5}, DOI={10.1007/s11192-021-03972-5}, number={12}, journal={Scientometrics}, publisher={Springer Science and Business Media LLC}, author={Momeni, Fakhri and Mayr, Philipp and Fraser, Nicholas and Peters, Isabella}, year={2021}, month=apr, pages={9811–9827} }
 
-@article{Pinhasi_2020, title={The impact of open access publishing agreements at the {University of Vienna} in light of the Plan S requirements: a review of current status, challenges and perspectives}, volume={33}, ISSN={2048-7754}, url={http://dx.doi.org/10.1629/uksg.523}, DOI={10.1629/uksg.523}, journal={Insights the UKSG journal}, publisher={Ubiquity Press, Ltd.}, author={Pinhasi, Rita and Kromp, Brigitte and Blechl, Guido and Hölbling, Lothar}, year={2020} }
+@article{Pinhasi_2020, title={The impact of open access publishing agreements at the {University of Vienna} in light of the {Plan S} requirements: a review of current status, challenges and perspectives}, volume={33}, ISSN={2048-7754}, url={http://dx.doi.org/10.1629/uksg.523}, DOI={10.1629/uksg.523}, journal={Insights the UKSG journal}, publisher={Ubiquity Press, Ltd.}, author={Pinhasi, Rita and Kromp, Brigitte and Blechl, Guido and Hölbling, Lothar}, year={2020} }
 
 @article{Pinhasi_2021, title={Austrian Transition to Open Access: a collaborative approach}, volume={34}, ISSN={2048-7754}, url={http://dx.doi.org/10.1629/uksg.561}, DOI={10.1629/uksg.561}, journal={Insights the UKSG journal}, publisher={Ubiquity Press, Ltd.}, author={Pinhasi, Rita and Hölbling, Lothar and Kromp, Brigitte}, year={2021} }
 
-@misc{Brainard_2023, DOI={10.1126/science.adj3282}, author = {Jeffery Brainard}, journal={Science}, year={2023}, title = {‘Transformative’ journals get booted for switching to open access too slowly} }
+@article{Brainard_2023, DOI={10.1126/science.adj3282}, author = {Jeffery Brainard}, journal={Science}, year={2023}, title = {‘Transformative’ journals get booted for switching to open access too slowly} }
 
 @article{Brainard_2021, title={California universities and {Elsevier} make up, ink big open-access deal}, ISSN={1095-9203}, url={http://dx.doi.org/10.1126/science.abi5505}, DOI={10.1126/science.abi5505}, journal={Science}, publisher={American Association for the Advancement of Science (AAAS)}, author={Brainard, Jeffrey}, year={2021}, month=mar }
 
@@ -128,7 +146,7 @@ url = {https://hdl.handle.net/11858/00-001M-0000-0013-838A-6}
 
 @article{Schares_2023, title={Impact of the 2022 OSTP memo: A bibliometric analysis of US federally funded publications, 2017–2021}, volume={4}, ISSN={2641-3337}, url={http://dx.doi.org/10.1162/qss_a_00237}, DOI={10.1162/qss_a_00237}, number={1}, journal={Quantitative Science Studies}, publisher={MIT Press}, author={Schares, Eric}, year={2023}, pages={1–21} }
 
-@article{Kwiek_2020, title={What large-scale publication and citation data tell us about international research collaboration in Europe: changing national patterns in global contexts}, volume={46}, ISSN={1470-174X}, url={http://dx.doi.org/10.1080/03075079.2020.1749254}, DOI={10.1080/03075079.2020.1749254}, number={12}, journal={Studies in Higher Education}, publisher={Informa UK Limited}, author={Kwiek, Marek}, year={2021}, month=apr, pages={2629–2649} }
+@article{Kwiek_2020, title={What large-scale publication and citation data tell us about international research collaboration in {Europe}: changing national patterns in global contexts}, volume={46}, ISSN={1470-174X}, url={http://dx.doi.org/10.1080/03075079.2020.1749254}, DOI={10.1080/03075079.2020.1749254}, number={12}, journal={Studies in Higher Education}, publisher={Informa UK Limited}, author={Kwiek, Marek}, year={2021}, month=apr, pages={2629–2649} }
 
 @article{Schiermeier_2018, title={China backs bold plan to tear down journal paywalls}, volume={564}, ISSN={1476-4687}, url={http://dx.doi.org/10.1038/d41586-018-07659-5}, DOI={10.1038/d41586-018-07659-5}, number={7735}, journal={Nature}, publisher={Springer Science and Business Media LLC}, author={Schiermeier, Quirin}, year={2018}, month=dec, pages={171–172} }
 
@@ -153,7 +171,6 @@ year = {2022}
     booktitle    = {87th IFLA World Library and Information Congress (WLIC) / 2022 in Dublin, Ireland},
     publisher    = {IFLA},
     address      = {Dublin, Ireland},
-    editor       = {International Federation of Library Associations and Institutions (IFLA)},
     url          = {https://repository.ifla.org/handle/123456789/1973}
 }
 
@@ -840,7 +857,7 @@ year = {2020}
   title = {Transformative Agreements: A Primer},
   year = 2019,
   publisher = {The Scholarly Kitchen},
-  howpublished = {\url{https://web.archive.org/web/20210128170342/https://scholarlykitchen.sspnet.org/2019/04/23/transformative-agreements/}}}
+  url = {https://web.archive.org/web/20210128170342/https://scholarlykitchen.sspnet.org/2019/04/23/transformative-agreements/} }
 
   @article{Lawson_2015,
     doi = {10.1087/20150103},
