--- a/analysis/manuscript.tex
+++ b/analysis/manuscript.tex
@@ -149,7 +149,7 @@ transformative agreements lead to reduced pricing remains uncertain
 (Borrego, 2023) and a substantial transition of hybrid journals towards
 full open access could not be observed (Matthias et al., 2019; Momeni et
 al., 2021). The focus on large commercial publishers might also increase
-inequality (Klebel \& Ross-Hellauer, 2023), because transformative
+inequality (Ross-Hellauer et al., 2022), because transformative
 agreements' focus on pay to publish mainly targets institutions from
 high-income countries, furthering a questionable journal prestige
 culture (Babini et al., 2022). Besides, an editorial-board resignation
@@ -181,9 +181,9 @@ transformative agreements. Previous studies have focused on specific
 countries (Haucap et al., 2021; Huang et al., 2020; Pölönen et al.,
 2020; Taubert et al., 2023; Wenaas, 2022) or publisher portfolios
 (Bakker et al., 2024; Fraser et al., 2023; Jahn et al., 2022; Momeni et
-al., 2023; Pieper \& Broschinski, 2018), while large-scale studies
-relied on self-reported agreement data (Moskovkin et al., 2022), or used
-APC pricing lists (Shu \& Larivière, 2023). In particular, data
+al., 2023; Pieper \& Broschinski, 2018; Schmal, 2024), while large-scale
+studies relied on self-reported agreement data (Moskovkin et al., 2022),
+or used APC pricing lists (Shu \& Larivière, 2023). In particular, data
 availability is a limiting factor when studying the impact of
 transformative agreements (Bakker et al., 2024), because bibliometric
 databases, even though many allow the retrieval of open access articles
@@ -220,14 +220,14 @@ agreement data retrieved from cOAlition S Journal Checker
 Tool\footnote{\url{https://www.coalition-s.org/blog/enabling-accurate-results-within-the-journal-checker-tool/}}
 provided information about journal portfolios and participating
 institutions. After identifying hybrid journals by excluding fully open
-access journals, Crossref served as the primary data source for
-article-level metadata including Creative Commons (CC) license
-information to indicate open access availability on publisher websites.
-To determine open access articles published through transformative
-agreements, first author affiliations from OpenAlex (Priem et al., 2022)
-were subsequently linked to eligible institutions according to the
-transformative agreement data. In the following, the steps are described
-in detail.
+access journals, Crossref (Hendricks et al., 2020) served as the primary
+data source for article-level metadata including Creative Commons (CC)
+license information to indicate open access availability on publisher
+websites. To determine open access articles published through
+transformative agreements, first author affiliations from OpenAlex
+(Priem et al., 2022) were subsequently linked to eligible institutions
+according to the transformative agreement data. In the following, the
+steps are described in detail.
 
 \begin{figure}[ht!]
 
@@ -316,22 +316,22 @@ access evidence from Unpaywall, a widely used open access discovery
 service that also parses journal websites for open content licenses
 (Piwowar et al., 2018), highlighted ongoing challenges in identifying
 hybrid open access (Butler et al., 2023; Jahn et al., 2022;
-Martín-Martín et al., 2018; Zhang et al., 2022). Here, 742,369 articles
-under CC license were retrieved using Crossref, while 950,260 articles
-were tagged as ``hybrid'' according to the OpenAlex November 2023
-release, which was used throughout this study. The largest differences
-concerned articles published between 2018 and 2020. In 2022, however,
-Crossref and OpenAlex open access numbers differ only slightly (249,511
-records using Crossref vs.~255,344 in OpenAlex). Notable differences
-could be observed among some publishers that presumably did not provide
-CC license information to Crossref, including AIP Publishing, the
-American Physiological Society, Emerald, and the Royal Society. Crossref
-license metadata was more complete with regard to the articles published
-by Wiley and the American Chemical Society. Finally, inconsistent open
-access status information in previous OpenAlex versions was observed
-(Jahn et al., 2023). After reporting this to OpenAlex, fixing this issue
-was still ongoing according to the release notes, which might also
-explain part of the discrepancy.
+Martín-Martín et al., 2018; Zhang et al., 2022). For the purpose of this
+study, 742,369 articles under CC license were retrieved using Crossref,
+while 950,260 articles were tagged as ``hybrid'' according to the
+OpenAlex November 2023 release, which was used throughout this study.
+The largest differences concerned articles published between 2018 and
+2020. In 2022, however, Crossref and OpenAlex open access numbers differ
+only slightly (249,511 records using Crossref vs.~255,344 in OpenAlex).
+Notable differences could be observed among some publishers that
+presumably did not provide CC license information to Crossref, including
+AIP Publishing, the American Physiological Society, Emerald, and the
+Royal Society. Crossref license metadata was more complete with regard
+to the articles published by Wiley and the American Chemical Society.
+Finally, inconsistent open access status information in previous
+OpenAlex versions was observed (Jahn et al., 2023). After reporting this
+to OpenAlex, fixing this issue was still ongoing according to the
+release notes, which might also explain part of the discrepancy.
 
 After retrieving the article metadata, the publication volume, including
 open access, was calculated for each journal. To improve the
@@ -388,14 +388,14 @@ according to Crossref, while fully open access journals recorded 35\%.
 Throughout this mostly automated data gathering and analysis process,
 Tidyverse tools (Wickham et al., 2019) for the R programming language (R
 Core Team, 2020) were used. The resulting data are openly available
-through an R data package, hoaddata, version 0.2.91 Following Marwick et
+through an R data package, hoaddata (Jahn, 2023). Following Marwick et
 al. (2018), hoaddata contains not only the datasets used in the data
 analysis. It also includes code used to compile the data by connecting
 it to the cloud-based Google Big Query data warehouse, where scholarly
-big data from Crossref, OpenAlex and Unpaywall were imported. To
-increase computational reproducibility, data aggregation through
-hoaddata was automatically carried out using GitHub Actions, a
-continuous integration service.
+big data from Crossref, OpenAlex and Unpaywall were imported, using
+bigrquery (Wickham \& Bryan, 2020). To increase computational
+reproducibility, data aggregation through hoaddata was automatically
+carried out using GitHub Actions, a continuous integration service.
 
 \hypertarget{results}{%
 \section{Results}\label{results}}
@@ -409,7 +409,9 @@ under a Creative Commons license. During this period, these hybrid
 journals provided open access to 742,369 of the 8,146,958 articles,
 representing a five-year open access proportion of 9.1\%. Authors who
 could make use of transformative agreements at the time of publication
-contributed 328,957 open access articles.
+contributed 328,957 open access articles. Overall, 394 transformative
+agreements recorded at least one open access article from an eligible
+institution.
 
 \begin{figure}[ht!]
 
@@ -425,7 +427,7 @@ proportion of open access articles in hybrid journals, comparing the
 overall open access uptake and the impact of transformative agreements
 on this trend. Over the five-years period from 2018 to 2022, open access
 increased from 4.3\% (n = 65,486) to 15\% (n = 249,511). Simultaneously,
-the total article volume of the investigated journals increased from
+the total article volume of the investigated journals rose from
 1,528,051 in 2018 to 1,676,928 in 2022.
 
 Figure \ref{fig:results_overview}B highlights that the majority of
@@ -433,8 +435,8 @@ hybrid open access was made available through transformative agreements
 in 2021 and 2022, contributing 58\% of the total open access article
 volume in 2022. However, there was also a notable increase in open
 access provision through other means, presumably publication fees being
-not invoiced through transformative agreements, which increased from
-4.1\% (n = 62,625) in 2018 to 6.3\% (n = 105,896).
+not invoiced through transformative agreements, from 4.1\% (n = 62,625)
+in 2018 to 6.3\% (n = 105,896).
 
 Figure \ref{fig:results_overview}C depicts the substantial variations
 among the hybrid journals included in transformative agreements in terms
@@ -533,19 +535,19 @@ agreements. Springer Nature, for example, started offering open access
 agreements for its hybrid journal portfolio to selected consortia such
 as the Max Planck Society, the Swedish Bibsam Consortium and the Finnish
 FinELib consortium in 2015 under the name Springer Compact\footnote{\url{https://web.archive.org/web/20180414062853id_/http://www.liber2015.org.uk/wp-content/uploads/2015/03/Springer-Compact.pdf}}.
-Prior to this, Springer discontinued its hybrid OA pilot agreements with
-a small number of institutions, including the University of Göttingen
-(Schmidt \& Shearer, 2012). However, the Springer Compact agreements
-were not included in the data as they concluded prior to the start of
-the transformative agreement data collection in June 2021. Nonetheless,
-the results demonstrate the importance of agreements for Springer
-Nature's hybrid open access business over the past five years (Figure
-2B). In 2022, 66\% (n = 34,725) of open access in Springer Nature hybrid
-journals was enabled through transformative agreements. In the same
-year, 70\% (n = 37,316) of Wiley's open access articles could be linked
-to transformative agreements in 2022. By contrast, Elsevier published
-fewer than half of its open access articles through transformative
-agreements (n = 32,627; 54\%).
+Prior to this, Springer had some pilot agreements with a small number of
+institutions, including the University of Göttingen (Schmidt \& Shearer,
+2012). However, the Springer Compact agreements were not included in the
+data as they concluded before the start of the transformative agreement
+data collection in June 2021. Nonetheless, the results demonstrate the
+importance of agreements for Springer Nature's hybrid open access
+business over the past five years (Figure 2B). In 2022, 66\% (n =
+34,725) of open access in Springer Nature hybrid journals was enabled
+through transformative agreements. In the same year, 70\% (n = 37,316)
+of Wiley's open access articles could be linked to transformative
+agreements in 2022. By contrast, Elsevier published fewer than half of
+its open access articles through transformative agreements (n = 32,627;
+54\%).
 
 The increasing trend towards transformative agreements can also be
 observed at the journal-level (Figure \ref{fig:publisher_figure}C).
@@ -572,14 +574,14 @@ journals with small annual article volumes.
 Table \ref{tab:subject_summary_table} presents a high-level overview of
 hybrid open access by AJCS subject area using fractionalised counting to
 account for journals belonging to more than one category. Between 2018
-and 2022, most hybrid journals with at least one open article could be
-attributed to the Social Sciences category, which also includes Arts and
-Humanities. However, these journals published the fewest number of
-articles, whereas Physical Sciences journals recorded the most articles,
-followed by Health Sciences and Life Sciences. In terms of open access,
-Physical Sciences journals accounted for more than one-third of the
-articles published in the five-year period, followed by Health Sciences,
-Social Sciences and Life Sciences.
+and 2022, most hybrid journals with at least one open access article
+could be attributed to the Social Sciences category, which also includes
+Arts and Humanities. However, these journals published the fewest number
+of articles, whereas Physical Sciences journals recorded the most
+articles, followed by Health Sciences and Life Sciences. In terms of
+open access, Physical Sciences journals accounted for more than
+one-third of the articles published in the five-year period, followed by
+Health Sciences, Social Sciences and Life Sciences.
 
 \begin{table}[H]
 
@@ -591,17 +593,17 @@ Social Sciences and Life Sciences.
 \cmidrule(l{3pt}r{3pt}){2-3} \cmidrule(l{3pt}r{3pt}){4-5} \cmidrule(l{3pt}r{3pt}){6-7} \cmidrule(l{3pt}r{3pt}){8-9}
 Journal subject & Total & \% & Total & \% & Total & \% & Total & \%\\
 \midrule
-Health Sciences & 2,376 & 22.5 & 2,709,906 & 27.8 & 286,592 & 27.3 & 117,746 & 25\\
-Life Sciences & 1,403 & 13.3 & 1,477,808 & 15.1 & 191,880 & 18.3 & 71,593 & 15.2\\
-Physical Sciences & 2,732 & 25.9 & 4,291,833 & 44 & 366,794 & 35 & 167,686 & 35.6\\
-Social Sciences & 4,050 & 38.3 & 1,280,460 & 13.1 & 203,461 & 19.4 & 114,190 & 24.2\\
+Health Sciences & 2,342 & 22.5 & 1,998,045 & 28 & 199,265 & 27.7 & 81,913 & 25.7\\
+Life Sciences & 1,399 & 13.4 & 1,080,346 & 15.1 & 133,526 & 18.6 & 48,570 & 15.2\\
+Physical Sciences & 2,693 & 25.9 & 3,111,711 & 43.6 & 247,515 & 34.4 & 110,933 & 34.8\\
+Social Sciences & 3,967 & 38.1 & 953,084 & 13.3 & 138,388 & 19.3 & 77,496 & 24.3\\
 \bottomrule
 \end{tabular}
 \end{table}
 
 Figure \ref{fig:subject_panel} presents the relative growth of hybrid
-open access by subject area between 2018-2022. In particular, Social
-Sciences inbcluding Arts and Humanties journals accounted for the
+open access by subject area between 2018 and 2022. In particular, Social
+Sciences including Arts and Humanties journals accounted for the
 strongest growth in the five-years period from 6.4\% (n = 8,361) to 23\%
 (n = 51,938), followed by the Life Sciences from 7.6\% (n = 15,003) to
 18\% (n = 39,494) , Health Sciences from 5.3\% (n = 18,279) to 16\% (n =
@@ -629,7 +631,7 @@ agreements played a comparably lesser role in Life Sciences and Health
 Sciences. In these two subject areas, only about half of the open access
 articles can be linked to these agreements, both overall and on a median
 average across journals. In contrast, the majority of Physical Science
-Journals show an increase of open access through transformative
+journals show an increase of open access through transformative
 agreements compared to other options to publish open access in hybrid
 journals.
 
@@ -638,7 +640,7 @@ journals.
 
 Between 2018 and 2022, high-income countries almost exclusively
 dominated hybrid open access publishing through transformative
-agreements. During this period, first-authors affiliated with
+agreements. During this period, first authors affiliated with
 institutions from Organisation for Economic Co-operation and Development
 (OECD) member countries published 602,050 open access articles in hybrid
 journals, representing 81\% of the investigated open access articles.
@@ -652,10 +654,10 @@ access publishing by country, comparing the OECD area with the BRICS, an
 intergovernmental organisation, which comprised Brazil, Russia, India,
 China, and South Africa as of 2022. The residual category ``Other''
 includes the remaining countries. Full counting was applied to account
-for multiple institutional affiliations (Hottenrott et al., 2021). From
-2018 to 2022, the proportion of open access in hybrid journals increased
-from 6.1\% in 2018 to 26\% in 2022. In contrast, BRICS recorded a low
-uptake, moderately growing from 1.6\% in 2018 to 3.7\% in 2022.
+for multiple country affiliations (Hottenrott et al., 2021). From 2018
+to 2022, the proportion of open access in hybrid journals increased from
+6.1\% in 2018 to 26\% in 2022. In contrast, BRICS recorded a low uptake,
+moderately growing from 1.6\% in 2018 to 3.7\% in 2022.
 
 Despite the rise of open access across OECD countries, the overall
 publication output decreased sharply, dropping to 786,903 in 2022 after
@@ -688,10 +690,9 @@ articles. With 391,530 articles, China was the most productive country,
 followed by the United States (268,965 articles) and India (87,428
 articles). In contrast, Western and Northern European countries
 published a considerably high number of open access articles.
-Particularly, Germany, Great Britain, the Netherlands, Sweden,
-Switzerland, and Spain recorded an above-average open access share, as
-indicated by the linear trend line. As represented by the point size, as
-well as that shown in Figure \ref{fig:country_patch}C, transformative
+Particularly, Scandinavian countries, the Netherlands and Austria
+recorded above-average open access shares, as indicated by the linear
+trend line. As shown in Figure \ref{fig:country_patch}C, transformative
 agreements contributed to these market positions. Interestingly, the
 United States had a notable open access market share of 15\%, although
 transformative agreements contributed to a lesser extent. Similarly,
@@ -726,16 +727,16 @@ Planck Society with Springer Compact.
 Since 2021, there has been a general trend towards hybrid open access
 among many high-income countries, driven primarily by transformative
 agreements. However, the proliferation of transformative agreements
-differed across these countries. For instance, Germany successfully
+differed across these countries. \# For instance, Germany successfully
 negotiated an agreement with Elsevier not until 2023. Additionally,
 publication limits or eligibility criteria for institutions and article
 types may explain why even countries with widespread agreement
 implementation such as Sweden or the Netherlands did not achieve 100\%
-hybrid open access. Interestingly, in Japan and the US, options other
-than transformative agreements were the main drivers for the increase in
-hybrid open access. Once again, the graph highlights countries with low
-hybrid open access, particularly non-OECD countries, where only a few or
-no agreements were in place.
+hybrid open access. Interestingly, in Japan and the United States,
+options other than transformative agreements were the main drivers for
+the increase in hybrid open access. Once again, the graph highlights
+countries with low hybrid open access, particularly non-OECD countries,
+where only a few or no agreements were in place.
 
 \hypertarget{discussion}{%
 \section{Discussion}\label{discussion}}
@@ -751,7 +752,7 @@ of this journal business model. The results highlight a strong growth in
 open access between 2018 and 2022, driven by an increasing number of
 institutions that had transformative agreements in place. However, the
 majority of research literature published in hybrid journals in this
-five-year period remained behind the publisher's paywall. Growth in the
+five-year period remained behind publisher paywalls. Growth in the
 adoption of open access in hybrid journals, in particular through
 transformative agreements, can be largely attributed to three large
 commercial publishers -- Elsevier, Springer Nature, and Wiley -- but
@@ -786,20 +787,20 @@ Moreover, this study presents varying levels of open access uptake
 through transformative agreements across journals, which can be
 attributed to the alignment of authors' affiliations and the
 availability of such agreements at their institutions. In line with
-previous research findings (Butler et al., 2023; Jahn et al., 2022),
-high uptake rates were observed across hybrid journals in Social
-Sciences and Humanities. However, it is important to emphasise that
-these hybrid journals do not encompass the entire field. For example,
-Khanna et al. (2022) found that approximately 60\% of journals utilizing
-the open-source publishing platform Open Journal Systems (OJS) fall
-within the Social Sciences and Humanities. In these fields, the majority
-of full open access journals are so-called ``Diamond OA journals'',
-which do not charge publication fees (Bosman, Frantsvåg, et al., 2021).
-Rather, this result can be more accurately attributed to the substantial
-proportion of authors from high-income countries who publish in these
-hybrid journals included in transformative agreements, particularly when
-journals are of local relevance, such as by belonging to national
-societies or regional research scope.
+previous research findings (Butler et al., 2023; Jahn et al., 2022;
+Wenaas, 2022), high uptake rates were observed across hybrid journals in
+Social Sciences and Humanities. However, it is important to emphasise
+that these hybrid journals do not encompass the entire field. For
+example, Khanna et al. (2022) found that approximately 60\% of journals
+utilizing the open-source publishing platform Open Journal Systems (OJS)
+fall within the Social Sciences and Humanities. In these fields, the
+majority of full open access journals are so-called ``Diamond OA
+journals'', which do not charge publication fees (Bosman, Frantsvåg, et
+al., 2021). Rather, this result can be more accurately attributed to the
+substantial proportion of authors from high-income countries who publish
+in these hybrid journals included in transformative agreements,
+particularly when journals are of local relevance, such as by belonging
+to national societies or regional research scope.
 
 Surprisingly, the total publication output of high-income countries
 belonging to the OECD in hybrid journals declined substantially after
@@ -836,18 +837,18 @@ compared to Europe, 22\% of open access in hybrid journals in 2022
 originates from these two countries, indicating the availability of
 funding sources for publication fees.
 
-This large-scale study provides the first empiricial evidence of the
+This large-scale study provides the first empirical evidence of the
 influence of transformative agreements on the transition of hybrid
-journals to full open access. However, that study has several
-limitations that need to be acknowledged. From a data perspective,
-estimations of open access through transformative agreements were
-established by linking first author affiliations with publicly available
-agreement data from cOAlition S, and not through invoicing data, which
-is usually not shared. Moreover, this study is unable to account for the
-various types of transformative agreements, particularly with regard to
-article types and caps that limit the number of open access articles
-covered. Furthermore, assessing the quality of the OpenAlex and Crossref
-data used, particularly in terms of affiliations and article types, by
+journals to full open access. However, several limitations needs to be
+acknowledged. From a data perspective, estimations of open access
+through transformative agreements were established by linking first
+author affiliations with publicly available agreement data from
+cOAlition S, and not through invoicing data, which is usually not
+shared. Moreover, this study is unable to account for the various types
+of transformative agreements, particularly with regard to article types
+and caps that limit the number of open access articles covered.
+Furthermore, assessing the quality of the OpenAlex and Crossref data
+used, particularly in terms of affiliations and article types, by
 comparing them with established bibliometric databases such as Scopus
 and Web of Science was beyond the scope of this analysis. Overall, the
 methodology is designed in such a way that the results underestimate
@@ -866,8 +867,8 @@ inflows from China to the US and European countries already declined by
 2020 (Zhao et al., 2023). Furthermore, the study design did not consider
 emerging publication practices such as preprints (Fraser et al., 2021)
 and special issues (Hanson et al., 2023), which have grown rapidly since
-2020. Lastly, it should be emphasized that the study did not address
-financial shifts between suscriptiuons spending and open acces spayemnts
+2020. Lastly, it should be emphasised that the study did not address
+financial shifts between subscriptions spending and open access payments
 while analysing hybrid open access through transformative agreements due
 to a lack of data on expenditures.
 
@@ -877,9 +878,12 @@ individual countries or subjects, particularly those with low hybrid
 open access rates. Incorporating full open access and subscription-based
 journals, as well as considering global trends in scholarly migration
 and collaboration could also be promising. Financial studies could build
-upon the study design and incorporate subscription and open access
-expenditures to evaluate the cost-effectiveness of transformative
-agreements.
+on the study design and include subscription and open access expenditure
+to assess the cost-effectiveness of transformative agreements, in
+particular whether transformative agreements can integrate the
+substantial amounts of individual payments for publication fees (Butler
+et al., 2023; Wenaas, 2022), as well as potential changes in authors'
+behaviour following the introduction of these agreements (Schmal, 2024).
 
 This study has practical implications for research funding and
 libraries. Of primary concern should be the observed differences across
@@ -897,9 +901,9 @@ of hybrid open access following the introduction of transformative
 agreements. These results are important for both researchers and
 stakeholders engaged in negotiating and evaluating these agreements. The
 presented approach relies on open data, which enables follow-up studies
-and open access monitoring activties to further explore the role of
+and open access monitoring activities to further explore the role of
 transformative agreements in transitioning academic publishing to full
-and equitable open access.
+open access.
 
 \hypertarget{references}{%
 \section*{References}\label{references}}
@@ -975,8 +979,8 @@ big open-access deal. \emph{Science}.
 \url{https://doi.org/10.1126/science.abi5505}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Brainard_2023}{}}%
-Brainard, J. (2023). {`Transformative'} journals get booted for
-switching to open access too slowly. In \emph{Science}.
+Brainard, J. (2023). {``Transformative''} journals get booted for
+switching to open access too slowly. \emph{Science}.
 \url{https://doi.org/10.1126/science.adj3282}
 
 \leavevmode\vadjust pre{\hypertarget{ref-goldoa}{}}%
@@ -992,9 +996,8 @@ Science Studies}, 1--22. \url{https://doi.org/10.1162/qss_a_00272}
 
 \leavevmode\vadjust pre{\hypertarget{ref-ifla}{}}%
 Campbell, C., Dér, Á., Geschuhn, K., \& Valente, A. (2022). How are
-transformative agreements transforming libraries? In I. F. of Library
-Associations \& I. (IFLA) (Eds.), \emph{87th IFLA world library and
-information congress (WLIC) / 2022 in dublin, ireland}. IFLA.
+transformative agreements transforming libraries? \emph{87th IFLA World
+Library and Information Congress (WLIC) / 2022 in Dublin, Ireland}.
 \url{https://repository.ifla.org/handle/123456789/1973}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Dallmeier_2010}{}}%
@@ -1020,7 +1023,7 @@ negotiations with {Elsevier}. \emph{Quantitative Science Studies},
 
 \leavevmode\vadjust pre{\hypertarget{ref-Geschuhn_2017}{}}%
 Geschuhn, K., \& Stone, G. (2017). It's the workflows, stupid! What is
-required to make {`offsetting'} work for the open access transition.
+required to make {``offsetting''} work for the open access transition.
 \emph{Insights the {UKSG} Journal}, \emph{30}(3), 103--114.
 \url{https://doi.org/10.1629/uksg.391}
 
@@ -1035,10 +1038,16 @@ Haucap, J., Moshgbar, N., \& Schmal, W. B. (2021). The impact of the
 \emph{Managerial and Decision Economics}, \emph{42}(8), 2027--2049.
 \url{https://doi.org/10.1002/mde.3493}
 
+\leavevmode\vadjust pre{\hypertarget{ref-Hendricks_2020}{}}%
+Hendricks, G., Tkaczyk, D., Lin, J., \& Feeney, P. (2020). Crossref: The
+sustainable source of community-owned scholarly metadata.
+\emph{Quantitative Science Studies}, \emph{1}(1), 414--427.
+\url{https://doi.org/10.1162/qss_a_00022}
+
 \leavevmode\vadjust pre{\hypertarget{ref-Hinchliffe_2019}{}}%
 Hinchliffe, L. J. (2019). \emph{Transformative agreements: A primer}.
-\url{https://web.archive.org/web/20210128170342/https://scholarlykitchen.sspnet.org/2019/04/23/transformative-agreements/};
 The Scholarly Kitchen.
+\url{https://web.archive.org/web/20210128170342/https://scholarlykitchen.sspnet.org/2019/04/23/transformative-agreements/}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Hottenrott_2021}{}}%
 Hottenrott, H., Rose, M. E., \& Lawson, C. (2021). The rise of multiple
@@ -1052,9 +1061,14 @@ S., Ozaygen, A., \& Brookes-Kenworthy, C. (2020). Evaluating the impact
 of open access policies on research institutions. \emph{{eLife}},
 \emph{9}. \url{https://doi.org/10.7554/elife.57067}
 
+\leavevmode\vadjust pre{\hypertarget{ref-hoaddata}{}}%
+Jahn, N. (2023). \emph{{hoaddata}: Data about hybrid open access journal
+publishing}.
+\url{https://github.com/subugoe/hoaddata/releases/tag/v0.2.91}
+
 \leavevmode\vadjust pre{\hypertarget{ref-jahn2023}{}}%
 Jahn, N., Haupka, N., \& Hobert, A. (2023). \emph{Analysing and
-reclassifying open access information in OpenAlex}. Blog post.
+reclassifying open access information in OpenAlex}.
 \url{https://subugoe.github.io/scholcomm_analytics/posts/oalex_oa_status/}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Jahn_2021}{}}%
@@ -1081,11 +1095,6 @@ Recalibrating the scope of scholarly publishing: A modest step in a vast
 decolonization process. \emph{Quantitative Science Studies},
 \emph{3}(4), 912--930. \url{https://doi.org/10.1162/qss_a_00228}
 
-\leavevmode\vadjust pre{\hypertarget{ref-Klebel_2023}{}}%
-Klebel, T., \& Ross-Hellauer, T. (2023). The APC-barrier and its effect
-on stratification in open access publishing. \emph{Quantitative Science
-Studies}, \emph{4}(1), 22--43. \url{https://doi.org/10.1162/qss_a_00245}
-
 \leavevmode\vadjust pre{\hypertarget{ref-Koley_2023}{}}%
 Koley, M., \& Lala, K. (2023). Limitations of the {{``Indian one nation,
 one subscription''}} policy proposal and a way forward. \emph{Journal of
@@ -1094,9 +1103,9 @@ Librarianship and Information Science}, 096100062211467.
 
 \leavevmode\vadjust pre{\hypertarget{ref-Kwiek_2020}{}}%
 Kwiek, M. (2021). What large-scale publication and citation data tell us
-about international research collaboration in europe: Changing national
-patterns in global contexts. \emph{Studies in Higher Education},
-\emph{46}(12), 2629--2649.
+about international research collaboration in {Europe}: Changing
+national patterns in global contexts. \emph{Studies in Higher
+Education}, \emph{46}(12), 2629--2649.
 \url{https://doi.org/10.1080/03075079.2020.1749254}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Laakso_2016}{}}%
@@ -1214,9 +1223,9 @@ open access: A collaborative approach. \emph{Insights the UKSG Journal},
 \leavevmode\vadjust pre{\hypertarget{ref-Pinhasi_2020}{}}%
 Pinhasi, R., Kromp, B., Blechl, G., \& Hölbling, L. (2020). The impact
 of open access publishing agreements at the {University of Vienna} in
-light of the plan s requirements: A review of current status, challenges
-and perspectives. \emph{Insights the UKSG Journal}, \emph{33}.
-\url{https://doi.org/10.1629/uksg.523}
+light of the {Plan S} requirements: A review of current status,
+challenges and perspectives. \emph{Insights the UKSG Journal},
+\emph{33}. \url{https://doi.org/10.1629/uksg.523}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Piwowar_2018}{}}%
 Piwowar, H., Priem, J., Larivière, V., Alperin, J. P., Matthias, L.,
@@ -1244,7 +1253,7 @@ Publishing}, \emph{16}(3), 163--166.
 \url{https://doi.org/10.1087/095315103322110923}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Goodin_2023}{}}%
-Rasmussen, K. B. (2023). Interview with {Robert {`Bob'} E. Goodin}.
+Rasmussen, K. B. (2023). Interview with {Robert {``Bob''} E. Goodin}.
 \emph{Tidskrift För Politisk Filosofi}.
 \url{https://www.politiskfilosofi.se/fulltext/2023-2/pdf/TPF_2023-2_interview_with_robert_bob_e_goodin.pdf}
 
@@ -1252,6 +1261,12 @@ Rasmussen, K. B. (2023). Interview with {Robert {`Bob'} E. Goodin}.
 Robinson-Garcia, N., Costas, R., \& Leeuwen, T. N. van. (2020). Open
 access uptake by universities worldwide. \emph{{PeerJ}}, \emph{8},
 e9410. \url{https://doi.org/10.7717/peerj.9410}
+
+\leavevmode\vadjust pre{\hypertarget{ref-Ross_Hellauer_2022}{}}%
+Ross-Hellauer, T., Reichmann, S., Cole, N. L., Fessl, A., Klebel, T., \&
+Pontika, N. (2022). Dynamics of cumulative advantage and threats to
+equity in open science: A scoping review. \emph{Royal Society Open
+Science}, \emph{9}(1). \url{https://doi.org/10.1098/rsos.211032}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Schares_2022}{}}%
 Schares, E. (2022). Unsub extender: A python-based web application for
@@ -1270,7 +1285,7 @@ paywalls. \emph{Nature}, \emph{564}(7735), 171--172.
 \url{https://doi.org/10.1038/d41586-018-07659-5}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Schiltz_2018}{}}%
-Schiltz, M. (2018). Science without publication paywalls: cOAlition s
+Schiltz, M. (2018). Science without publication paywalls: {cOAlition S}
 for the realisation of full and immediate open access. \emph{PLOS
 Biology}, \emph{16}(9), e3000031.
 \url{https://doi.org/10.1371/journal.pbio.3000031}
@@ -1280,6 +1295,11 @@ Schimmer, R., Geschuhn, K., \& Vogler, A. (2015). \emph{{Disrupting the
 subscription journals'business model for the necessary large-scale
 transformation to open access}}. Max Planck Digital Library.
 \url{https://doi.org/10.17617/1.3}
+
+\leavevmode\vadjust pre{\hypertarget{ref-Schmal_2024}{}}%
+Schmal, W. B. (2024). How transformative are transformative agreements?
+Evidence from germany across disciplines. \emph{Scientometrics}.
+\url{https://doi.org/10.1007/s11192-024-04955-y}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Schmidt_2012}{}}%
 Schmidt, B., \& Shearer, K. (2012). Licensing revisited: Open access
@@ -1304,6 +1324,11 @@ Wenaas, L. (2022). Choices of immediate open access and the relationship
 to journal ranking and publish-and-read deals. \emph{Frontiers in
 Research Metrics and Analytics}, \emph{7}.
 \url{https://doi.org/10.3389/frma.2022.943932}
+
+\leavevmode\vadjust pre{\hypertarget{ref-bigrquery}{}}%
+Wickham, H., \& Bryan, J. (2020). \emph{{bigrquery}: An interface to
+{Google's BigQuery API}}.
+\url{https://CRAN.R-project.org/package=bigrquery}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Zhang_2022}{}}%
 Zhang, L., Wei, Y., Huang, Y., \& Sivertsen, G. (2022). Should open
